pgrx-tests/tests/ui/total_eq_for_postgres_eq.stderr
error[E0277]: the trait bound `BrokenType: std::cmp::Eq` is not satisfied
 --> tests/ui/total_eq_for_postgres_eq.rs:4:59
  |
4 | #[derive(Serialize, Deserialize, PartialEq, PostgresType, PostgresEq)]
  |                                                           ^^^^^^^^^^ the trait `std::cmp::Eq` is not implemented for `BrokenType`
  |
  = help: see issue #48214
  = note: this error originates in the derive macro `PostgresEq` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `BrokenType` with `#[derive(Eq)]`
  |
5 + #[derive(Eq)]
6 | pub struct BrokenType {
  |
